# IndieStudio

./: .gitignore  Bomberman.cbp  Bomberman2  CMakeLists.txt  CMakeSave.txt  Doc  README.md
Doc/: DocLinks
Doc/Doxygen/html/: _a_button_8cpp.html  _a_button_8hpp.html  _a_button_8hpp_source.html  _block_8cpp.html  _block_8hpp.html  _block_8hpp_source.html  _bomb_8cpp.html  _bomb_8hpp.html  _bomb_8hpp_source.html  _button_8cpp.html  _button_8hpp.html  _button_8hpp_source.html  _button_element_8cpp.html  _button_element_8hpp.html  _button_element_8hpp_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _camera_move_8cpp.html  _camera_move_8hpp.html  _camera_move_8hpp_source.html  _character_8cpp.html  _character_8hpp.html  _character_8hpp_source.html  _character_scene_node_8cpp.html  _character_scene_node_8hpp.html  _character_scene_node_8hpp_source.html  _client_8cpp.html  _client_8hpp.html  _client_8hpp_source.html  _entity_8cpp.html  _entity_8hpp.html  _entity_8hpp_source.html  _error_8hpp.html  _error_8hpp_source.html  _event_receiver_8hpp.html  _event_receiver_8hpp_source.html  _font_button_8cpp.html  _font_button_8hpp.html  _font_button_8hpp_source.html  _formatted_socket_8cpp.html  (+158 more)
Doc/Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  defines_8.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  enums_0.js  enums_1.js  (+54 more)
Doc/Doxygen/latex/: _a_button_8cpp.tex  _a_button_8hpp.tex  _block_8cpp.tex  _block_8hpp.tex  _bomb_8cpp.tex  _bomb_8hpp.tex  _button_8cpp.tex  _button_8hpp.tex  _button_element_8cpp.tex  _button_element_8hpp.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _camera_move_8cpp.tex  _camera_move_8hpp.tex  _character_8cpp.tex  _character_8hpp.tex  _character_scene_node_8cpp.tex  _character_scene_node_8hpp.tex  _client_8cpp.tex  _client_8hpp.tex  _entity_8cpp.tex  _entity_8hpp.tex  _error_8hpp.tex  _event_receiver_8hpp.tex  _font_button_8cpp.tex  _font_button_8hpp.tex  _formatted_socket_8cpp.tex  _formatted_socket_8hpp.tex  _irr_font_8cpp.tex  _irr_font_8hpp.tex  _irr_font_buffer_8cpp.tex  _irr_font_buffer_8hpp.tex  _juke_box_8cpp.tex  _juke_box_8hpp.tex  _main_8cpp.tex  _menu_8cpp.tex  _menu_8hpp.tex  _menu_element_8cpp.tex  _menu_element_8hpp.tex  _player_8cpp.tex  (+80 more)
Include/: Animation.hpp  Block.hpp  Bomb.hpp  CameraMoove.hpp  CameraMove.hpp  Character.hpp  Client.hpp  DataType.hpp  Demo.hpp  Entity.hpp  Error.hpp  EventReceiver.hpp  FormattedSocket.hpp  Globpp.hpp  JukeBox.hpp  Player.hpp  PowerUp.hpp  RandomMapGenerator.hpp  Receiver.hpp  Sender.hpp  Server.hpp  Sound.hpp  TcpListener.hpp  TcpSocket.hpp  Utility.hpp  Window.hpp  World.hpp
Include/Entity/: Bomb.hpp  Character.hpp  Player.hpp  PowerUp.hpp
Include/Network/: Socket.hpp
Include/Text3d/: CharacterSceneNode.hpp  IrrFont.hpp  IrrFontBuffer.hpp  WordSceneNode.hpp
Include/UserInterface/: AButton.hpp  Button.hpp  ButtonElement.hpp  FontButton.hpp  Menu.hpp  MenuElement.hpp  UI.hpp  UserInterface.hpp  Wheel.hpp
Resources/: Score
Resources/Block/Box/: Property
Resources/Block/Fire/: Property
Resources/Block/Wall/: Property
Resources/Entity/Bomberman/Model/: Idle.md2
Resources/Map/: BombermanMap  Demo  DemoWithoutEdge  MapTest2
Resources/Map/Game/: 15x15  1_21x21  1_21x28  1_24x26  21x21  21x31  2_21x21  2_21x28  31x21  31x25  4_21x21  9x9  Default  Demo  Duel  Emtpy  Save  T3x3
Resources/assets/: player_walk.md2
Src/: Animation.cpp  Block.cpp  Bomb.cpp  CameraMoove.cpp  CameraMove.cpp  Character.cpp  Client.cpp  Demo.cpp  Entity.cpp  Error.cpp  FormattedSocket.cpp  Globpp.cpp  JukeBox.cpp  Main.cpp  Player.cpp  PowerUp.cpp  RandomMapGenerator.cpp  Receiver.cpp  Sender.cpp  Server.cpp  Utility.cpp  Window.cpp  World.cpp
Src/Entity/: Bomb.cpp  Character.cpp  Player.cpp  PowerUp.cpp
Src/Network/: Socket.cpp
Src/Text3d/: CharacterSceneNode.cpp  IrrFont.cpp  IrrFontBuffer.cpp  WordSceneNode.cpp
Src/UserInterface/: AButton.cpp  Button.cpp  ButtonElement.cpp  FontButton.cpp  Menu.cpp  MenuElement.cpp  Render.cpp  UI.cpp  UserInterface.cpp  Wheel.cpp
